<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ecut.huandong.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ecut.huandong.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.ecut.huandong.ui.discover.DiscoversFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discovers" />

    <fragment
        android:id="@+id/navigation_sport"
        android:name="com.ecut.huandong.ui.sport.SportFragment"
        android:label="@string/title_sport"
        tools:layout="@layout/fragment_sport" />
    <fragment
        android:id="@+id/navigation_comminity"
        android:name="com.ecut.huandong.ui.community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" />
</navigation>